--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
 	<meta charset="UTF-8">
 	<title>Etsy Items</title>
 	<link rel="stylesheet" href="main.css"/>
+	<link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<p class="etsy"> Etsy Items</p>
+	<p class="etsy">Etsy Items</p>
 	<div id="banner">
-		<imc src="images.banner.jpg" />
+	</div>
+	<div id="container">
+		<div id="Answer">
+			<p>Answer 1</p>
+				<span class="s1">stuff here</span>
+			<p>Answer 2</p>
+				<span class="s2">stuff here</span>
+			<p>Answer 3</p>
+				<span class="s3">stuff here</span>
+			<p>Answer 4</p>
+				<span class="s4">stuff here</span>
+			<p>Answer 5</p>
+				<span class="s5">stuff here</span>
+			<p>Answer 6</p>
+				<span class="s6">stuff here</span>
+		</div>		
+	</div>
+	<footer>
+		<p class="footer">&copy; 2015 Jaimarie Velasco</p>
+	</footer>
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="items.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
