Adds revised html, css and js files with html and css styling

--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
 
 </head>
 <body>
-	<div id="Header">
-		<h1>Etsy Items</h1>
+	<div id="wrapper">
+	<div id="header">
+		<h4>Etsy Items</h4>
 	</div>
 
-	<div id="banner"></div>
+	<div id="banner"><img src="banner.jpg" /></div>
+	<div id="questionArea">
+	<div id="question1"><span class="qa">Answer 1 - </span></br><span class="qaMore">The average price of all items:</span></br><span class="answers"></span></div>	
 
-	<div id="Question1" class="QA"></div>	
+	<div id="question2"><span class="qa">Answer 2 - </span></br><span class="qaMore">An array of items that cost between $14.00 and $18.00:</span></br><span class="answers"></span></div>
 
-	<div id="Question2" class="QA">></div>
+	<div id="question3"><span class="qa">Answer 3 - </span></br><span class="qaMore">Which item has a GBP currency code? Display name and price:</span></br><span class="answers"></span></div>
 
-	<div id="Question3" class="QA">></div>
+	<div id="question4"><span class="qa">Answer 4 - </span></br><span class="qaMore">Display a list of all items who are made of wood:</span></br><span class="answers"></span></div>
 
-	<div id="Question4" class="QA">></div>
+	<div id="question5"><span class="qa">Answer 5 - </span></br><span class="qaMore">Items made of eight or more materials - name of item, number of items, and the items it is made of:</span></br><span class="answers"></span></div>
 
-	<div id="Question5" class="QA">></div>
+	<div id="question6"><span class="qa">Answer 6 - </span></br><span class="qaMore">How many items were made by their sellers?</span></br><span class="answers"></span></div>
+	</div>
 
-	<div id="Question6" class="QA">></div>
-
-	<div id="footer"></div>
+	<div id="footer"></br></br></br></br></br>@ 2015 Mychelle Blake</div>
 
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="items.js"></script>
 		<script src="main.js"></script>
-
+	</div>
 </body>
 </html>
