--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 	<div id="container">
 		<div id="Answer">
 			<p>Answer 1</p>
-				<span class="s1">stuff here</span>
+				<span class="s1"></span>
 			<p>Answer 2</p>
-				<span class="s2">stuff here</span>
+				<span class="s2"></span>
 			<p>Answer 3</p>
-				<span class="s3">stuff here</span>
+				<span class="s3"></span>
 			<p>Answer 4</p>
-				<span class="s4">stuff here</span>
+				<span class="s4"></span>
 			<p>Answer 5</p>
-				<span class="s5">stuff here</span>
+				<span class="s5"></span>
 			<p>Answer 6</p>
-				<span class="s6">stuff here</span>
+				<span class="s6"></span>
 		</div>		
 	</div>
 	<footer>
