Adds the answers tohtml

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
   <div class = "Questioms">
 
-    <div id = "Question1"> <h1>Answer 1</hb> </div> <span id = "span1"> answer here </span>
+    <div id = "Question1"> <h1>Answer 1</h1> </div> <span id = "span1"> </span>
 
-    <div id = "Question2"> <h1>Answer 2</h1> </div> <span id = "span2"> answer here </span>
+    <div id = "Question2"> <h1>Answer 2</h1> </div> <span id = "span2"> </span>
 
-    <div id = "Question3"> <h1>Answer 3</h1> </div> <span id = "span3"> answer here </span>
+    <div id = "Question3"> <h1>Answer 3</h1> </div> <span id = "span3"> </span>
 
-    <div id = "Question4"> <h1>Answer 4</h1> </div> <span id = "span4"> answer here </span>
+    <div id = "Question4"> <h1>Answer 4</h1> </div> <span id = "span4"> </span>
 
-    <div id = "Question5"> <h1>Answer 5</h1> </div> <span id = "span5"> answer here </span>
+    <div id = "Question5"> <h1>Answer 5</h1> </div> <span id = "span5"> </span>
 
-    <div id = "Question6"> <h1>Answer 6</h1> </div> <span id = "span6"> answer here </span>
+    <div id = "Question6"> <h1>Answer 6</h1> </div> <span id = "span6"> </span>
 
   </div>
 
