Adds revised html and js files.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
 	<div id="banner"><img src="banner.jpg" /></div>
 	<div id="questionArea">
-	<div id="question1"><span class="qa">Answer 1 - </span></br><span class="qaMore">The average price of all items:</span></br><span class="answers"></span></div>	
+	<div id="question1"><span class="qa">Answer 1 - </span></br><span  class="qaMore">The average price of all items:</span></br><span id="span1" class="answers"></span></div>	
 
-	<div id="question2"><span class="qa">Answer 2 - </span></br><span class="qaMore">An array of items that cost between $14.00 and $18.00:</span></br><span class="answers"></span></div>
+	<div id="question2"><span class="qa">Answer 2 - </span></br><span class="qaMore">An array of items that cost between $14.00 and $18.00:</span></br><span id="span2" class="answers"></span></div>
 
-	<div id="question3"><span class="qa">Answer 3 - </span></br><span class="qaMore">Which item has a GBP currency code? Display name and price:</span></br><span class="answers"></span></div>
+	<div id="question3"><span class="qa">Answer 3 - </span></br><span class="qaMore">Which item has a GBP currency code? Display name and price:</span></br><span id="span3" class="answers"></span></div>
 
-	<div id="question4"><span class="qa">Answer 4 - </span></br><span class="qaMore">Display a list of all items who are made of wood:</span></br><span class="answers"></span></div>
+	<div id="question4"><span class="qa">Answer 4 - </span></br><span class="qaMore">Display a list of all items who are made of wood:</span></br><span id="span4" class="answers"></span></div>
 
-	<div id="question5"><span class="qa">Answer 5 - </span></br><span class="qaMore">Items made of eight or more materials - name of item, number of items, and the items it is made of:</span></br><span class="answers"></span></div>
+	<div id="question5"><span class="qa">Answer 5 - </span></br><span class="qaMore">Items made of eight or more materials - name of item, number of items, and the items it is made of:</span></br><span id="span5" class="answers"></span></div>
 
-	<div id="question6"><span class="qa">Answer 6 - </span></br><span class="qaMore">How many items were made by their sellers?</span></br><span class="answers"></span></div>
+	<div id="question6"><span class="qa">Answer 6 - </span></br><span class="qaMore">How many items were made by their sellers?</span></br><span id="span6" class="answers"></span></div>
 	</div>
 
 	<div id="footer"></br></br></br></br></br>@ 2015 Mychelle Blake</div>
