--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 
 <h1>Etsy Items</h1>
 <img src="banner.jpg">
-<div class="answerDiv" id="answer1"></div>
-<div class="answerDiv" id="answer2"></div>
-<div class="answerDiv" id="answer3"></div>
-<div class="answerDiv" id="answer4"></div>
-<div class="answerDiv" id="answer5"></div>
-<div class="answerDiv" id="answer6"></div>
+<h2>Answer 1</h2>
+<div class="answerDiv"><span id="answer1"></span></div>
+<h2>Answer 2</h2>
+<div class="answerDiv"><span id="answer2"></span></div>
+<h2>Answer 3</h2>
+<div class="answerDiv"><span id="answer3"></span></div>
+<h2>Answer 4</h2>
+<div class="answerDiv"><span id="answer4"></span></div>
+<h2>Answer 5</h2>
+<div class="answerDiv"><span id="answer5"></span></div>
+<h2>Answer 6</h2>
+<div class="answerDiv"><span id="answer6"></span></div>
 
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="items.js"></script>
