added css styling and some appends

--- a/index.html
+++ b/index.html
@@ -3,24 +3,37 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
 <h1>Etsy Items</h1>
-<img src="banner.jpg">
-<h2>Answer 1</h2>
+<div id="imgBanner"></div>
+<span id="whiteBlock"><h2>Answer 1</h2></span>
+
 <div class="answerDiv"><span id="answer1"></span></div>
+
 <h2>Answer 2</h2>
+
 <div class="answerDiv"><span id="answer2"></span></div>
+
 <h2>Answer 3</h2>
+
 <div class="answerDiv"><span id="answer3"></span></div>
+
 <h2>Answer 4</h2>
+
 <div class="answerDiv"><span id="answer4"></span></div>
+
 <h2>Answer 5</h2>
+
 <div class="answerDiv"><span id="answer5"></span></div>
+
 <h2>Answer 6</h2>
+
 <div class="answerDiv"><span id="answer6"></span></div>
+
+<div id="footer"></div>
 
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="items.js"></script>
