--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
 
 <h1>Etsy Items</h1>
 <div id="imgBanner"></div>
-<span id="whiteBlock"><h2>Answer 1</h2></span>
+<h2><span id="whiteBlock">Answer 1</span></h2>
 
 <div class="answerDiv"><span id="answer1"></span></div>
 
-<h2>Answer 2</h2>
-
+<h2><span id="whiteBlock">Answer 2</span></h2>
 <div class="answerDiv"><span id="answer2"></span></div>
 
-<h2>Answer 3</h2>
+<h2><span id="whiteBlock">Answer 3</span></h2>
 
 <div class="answerDiv"><span id="answer3"></span></div>
 
-<h2>Answer 4</h2>
+<h2><span id="whiteBlock">Answer 4</span></h2>
 
 <div class="answerDiv"><span id="answer4"></span></div>
 
-<h2>Answer 5</h2>
+<h2><span id="whiteBlock">Answer 5</span></h2>
 
 <div class="answerDiv"><span id="answer5"></span></div>
 
-<h2>Answer 6</h2>
+<h2><span id="whiteBlock">Answer 6</span></h2>
 
 <div class="answerDiv"><span id="answer6"></span></div>
 
