updated progress on assign 8

--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 
 <div>
 	<h1>Answer 1</h1>
-	<span id="answer1"></span>
+	<p id="answer1"></p>
 </div>
 <div>
 	<h1>Answer 2</h1>
-	<span id="answer2"></span>
+	<p id="answer2"></p>
 </div>
 <div>
 	<h1>Answer 3</h1>
-	<span id="answer3"></span>
+	<p id="answer3"></p>
 </div>
 <div>
 	<h1>Answer 4</h1>
-	<span id="answer4"></span>
+	<p id="answer4"></p>
 </div>
 <div>
 	<h1>Answer 5</h1>
-	<span id="answer5"></span>
+	<p id="answer5"></p>
 </div>
 <div>
 	<h1>Answer 6</h1>
-	<span id="answer6"></span>
+	<p id="answer6"></p>
 </div>
 
 
