altered some text

--- a/index.html
+++ b/index.html
@@ -9,31 +9,32 @@
 
 <h1>Etsy Items</h1>
 <div id="imgBanner"></div>
-<h2><span id="whiteBlock">Answer 1</span></h2>
+<div id="answerMaster">
+	<h2><span id="whiteBlock">Answer 1</span></h2>
 
-<div class="answerDiv"><span id="answer1"></span></div>
+	<div class="answerDiv"><span id="answer1"></span></div>
 
-<h2><span id="whiteBlock">Answer 2</span></h2>
-<div class="answerDiv"><span id="answer2"></span></div>
+	<h2><span id="whiteBlock">Answer 2</span></h2>
+	<div class="answerDiv"><span id="answer2"></span></div>
 
-<h2><span id="whiteBlock">Answer 3</span></h2>
+	<h2><span id="whiteBlock">Answer 3</span></h2>
 
-<div class="answerDiv"><span id="answer3"></span></div>
+	<div class="answerDiv"><span id="answer3"></span></div>
 
-<h2><span id="whiteBlock">Answer 4</span></h2>
+	<h2><span id="whiteBlock">Answer 4</span></h2>
 
-<div class="answerDiv"><span id="answer4"></span></div>
+	<div class="answerDiv"><span id="answer4"></span></div>
 
-<h2><span id="whiteBlock">Answer 5</span></h2>
+	<h2><span id="whiteBlock">Answer 5</span></h2>
 
-<div class="answerDiv"><span id="answer5"></span></div>
+	<div class="answerDiv"><span id="answer5"></span></div>
+	<div id="answer5List"></div>
+	<h2><span id="whiteBlock">Answer 6</span></h2>
 
-<h2><span id="whiteBlock">Answer 6</span></h2>
-
-<div class="answerDiv"><span id="answer6"></span></div>
-
-<div id="footer"></div>
-
+	<div class="answerDiv"><span id="answer6"></span></div>
+</div>
+	<div id="footer"></div>
+	
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="items.js"></script>
 <script src="main.js"></script>
