--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 	<div class="answerDiv"><span id="answer6"></span></div>
 </div>
-	<div id="footer"></div>
-	
+	<div id="footer"><p>&copy; 2015 Thomas Shannon</p></div>
+
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="items.js"></script>
 <script src="main.js"></script>
