--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         </div><!--closes header div-->
         <div id="answer1" class="pad">
             <h2>Answer 1</h2>
-            <p></p>
+            <p>JS goes here</p>
         </div><!--closes answer 1 div-->
         <div id="answer2" class="pad">
             <h2>Answer 2</h2>
-            <p></p>
+            <p>JS goes here</p>
         </div><!--closes answer 2 div-->
         <div id="answer3" class="pad">
             <h2>Answer 3</h2>
-            <p></p>
+            <p>JS goes here</p>
         </div><!--closes answer 3 div-->
         <div id="answer4" class="pad">
             <h2>Answer 4</h2>
@@ -33,11 +33,11 @@
         </div><!--closes answers 4 div-->
         <div id="answer5" class="pad">
             <h2>Answer 5</h2>
-            <p></p>
+            <p>JS goes here</p>
         </div><!--closes answer 5 div-->
         <div id="answers6" class="pad">
             <h2>Answer 6</h2>
-            <p></p>
+            <p>JS goes here</p>
         </div><!--closes answer 6 div-->
         <div id="footer" class="pad">
             <p>&copy;2015 Me</p>
